--- a/AppList/AppList/Base.lproj/Main.storyboard
+++ b/AppList/AppList/Base.lproj/Main.storyboard
@@ -496,6 +496,7 @@
                                     <outlet property="LBLNome" destination="k99-tB-Us1" id="DhH-If-FyU"/>
                                     <outlet property="LBLcategoria" destination="MM8-oZ-GrM" id="8jB-0d-Y9e"/>
                                     <outlet property="imgApp" destination="56G-XE-UUS" id="FBB-Ju-g1N"/>
+                                    <segue destination="HyS-41-Kj4" kind="show" identifier="appDetail" id="CMF-7y-PTp"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -529,35 +530,48 @@
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7mv-oc-DAM">
                                 <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
-                                <variation key="heightClass=regular-widthClass=compact" ambiguous="YES" misplaced="YES">
-                                    <rect key="frame" x="73" y="343" width="255" height="202"/>
-                                </variation>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Categoria" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qmi-81-RL7">
-                                <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hw0-J1-0I5">
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="2WU-3i-2Ty"/>
+                                    <constraint firstAttribute="width" constant="46" id="kci-O2-Clr"/>
+                                </constraints>
                                 <state key="normal" title="Button">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
-                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="177" y="659" width="46" height="30"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="2WU-3i-2Ty"/>
+                                        <exclude reference="kci-O2-Clr"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="2WU-3i-2Ty"/>
+                                        <include reference="kci-O2-Clr"/>
+                                    </mask>
                                 </variation>
                                 <connections>
                                     <action selector="voltarApp:" destination="HyS-41-Kj4" eventType="touchUpInside" id="33N-8S-xnq"/>
                                     <segue destination="gIM-yo-vEZ" kind="show" id="qP3-fJ-eI5"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Categoria" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qmi-81-RL7">
+                                <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="7mv-oc-DAM" firstAttribute="leading" secondItem="ude-Lb-2rj" secondAttribute="leadingMargin" constant="57" id="00K-ea-7dV"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Qmi-81-RL7" secondAttribute="trailing" constant="114" id="2eZ-mT-Xoj"/>
+                            <constraint firstItem="hw0-J1-0I5" firstAttribute="top" secondItem="7mv-oc-DAM" secondAttribute="bottom" constant="114" id="6zK-wS-8RK"/>
                             <constraint firstItem="7mv-oc-DAM" firstAttribute="top" secondItem="Qmi-81-RL7" secondAttribute="bottom" constant="124" id="9Hz-BO-xc0"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="hw0-J1-0I5" secondAttribute="trailing" constant="161" id="BCl-4Z-Zhl"/>
+                            <constraint firstItem="SPo-Rv-sIo" firstAttribute="top" secondItem="hw0-J1-0I5" secondAttribute="bottom" constant="111" id="Cpt-fv-Wdl"/>
                             <constraint firstItem="wZ0-6Q-qh2" firstAttribute="leading" secondItem="ude-Lb-2rj" secondAttribute="leadingMargin" constant="114" id="SuE-MH-q7r"/>
                             <constraint firstAttribute="trailingMargin" secondItem="7mv-oc-DAM" secondAttribute="trailing" constant="56" id="VL1-Hu-QtC"/>
                             <constraint firstItem="Qmi-81-RL7" firstAttribute="leading" secondItem="ude-Lb-2rj" secondAttribute="leadingMargin" constant="114" id="gUi-AF-AHI"/>
@@ -566,47 +580,56 @@
                             <constraint firstItem="Qmi-81-RL7" firstAttribute="top" secondItem="wZ0-6Q-qh2" secondAttribute="bottom" constant="120" id="u0L-OM-weD"/>
                             <constraint firstItem="wZ0-6Q-qh2" firstAttribute="top" secondItem="5fL-9h-ipU" secondAttribute="bottom" constant="38" id="uDc-6N-ORD"/>
                             <constraint firstAttribute="trailingMargin" secondItem="wZ0-6Q-qh2" secondAttribute="trailing" constant="114" id="w3X-hL-GRf"/>
+                            <constraint firstItem="hw0-J1-0I5" firstAttribute="leading" secondItem="ude-Lb-2rj" secondAttribute="leadingMargin" constant="161" id="wmu-9h-jhc"/>
                         </constraints>
                         <variation key="default">
                             <mask key="subviews">
                                 <exclude reference="wZ0-6Q-qh2"/>
                                 <exclude reference="7mv-oc-DAM"/>
-                                <exclude reference="Qmi-81-RL7"/>
                                 <exclude reference="hw0-J1-0I5"/>
+                                <exclude reference="Qmi-81-RL7"/>
                             </mask>
                             <mask key="constraints">
+                                <exclude reference="SuE-MH-q7r"/>
+                                <exclude reference="uDc-6N-ORD"/>
+                                <exclude reference="w3X-hL-GRf"/>
                                 <exclude reference="2eZ-mT-Xoj"/>
                                 <exclude reference="gUi-AF-AHI"/>
                                 <exclude reference="nhK-2o-5XB"/>
                                 <exclude reference="u0L-OM-weD"/>
-                                <exclude reference="SuE-MH-q7r"/>
-                                <exclude reference="uDc-6N-ORD"/>
-                                <exclude reference="w3X-hL-GRf"/>
                                 <exclude reference="00K-ea-7dV"/>
                                 <exclude reference="9Hz-BO-xc0"/>
                                 <exclude reference="VL1-Hu-QtC"/>
                                 <exclude reference="pgJ-wl-PjP"/>
+                                <exclude reference="6zK-wS-8RK"/>
+                                <exclude reference="BCl-4Z-Zhl"/>
+                                <exclude reference="wmu-9h-jhc"/>
+                                <exclude reference="Cpt-fv-Wdl"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
                             <mask key="subviews">
                                 <include reference="wZ0-6Q-qh2"/>
                                 <include reference="7mv-oc-DAM"/>
-                                <include reference="Qmi-81-RL7"/>
                                 <include reference="hw0-J1-0I5"/>
+                                <include reference="Qmi-81-RL7"/>
                             </mask>
                             <mask key="constraints">
+                                <include reference="SuE-MH-q7r"/>
+                                <include reference="uDc-6N-ORD"/>
+                                <include reference="w3X-hL-GRf"/>
                                 <include reference="2eZ-mT-Xoj"/>
                                 <include reference="gUi-AF-AHI"/>
                                 <include reference="nhK-2o-5XB"/>
                                 <exclude reference="u0L-OM-weD"/>
-                                <include reference="SuE-MH-q7r"/>
-                                <include reference="uDc-6N-ORD"/>
-                                <include reference="w3X-hL-GRf"/>
                                 <include reference="00K-ea-7dV"/>
                                 <exclude reference="9Hz-BO-xc0"/>
                                 <include reference="VL1-Hu-QtC"/>
                                 <include reference="pgJ-wl-PjP"/>
+                                <include reference="6zK-wS-8RK"/>
+                                <include reference="BCl-4Z-Zhl"/>
+                                <include reference="wmu-9h-jhc"/>
+                                <include reference="Cpt-fv-Wdl"/>
                             </mask>
                         </variation>
                     </view>
