--- a/AppList/AppList/Base.lproj/Main.storyboard
+++ b/AppList/AppList/Base.lproj/Main.storyboard
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6750" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Ak5-bz-ulE">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6735"/>
-        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -35,7 +34,7 @@
                                 </variation>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pKR-Hy-jaa">
-                                <rect key="frame" x="21" y="348" width="558" height="200"/>
+                                <rect key="frame" x="21" y="309" width="558" height="200"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="200" id="xwQ-2m-X7P"/>
                                 </constraints>
@@ -83,20 +82,34 @@
                                     <action selector="cadastrar:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Qar-Ng-VmT"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qQN-y0-pZU">
+                                <rect key="frame" x="21" y="520" width="558" height="30"/>
+                                <state key="normal" title="Voltar">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="btnVoltar:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZAl-fm-zhe"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="centerX" secondItem="3Yo-PL-Xfg" secondAttribute="centerX" id="53D-m6-LkV"/>
+                            <constraint firstItem="laT-Ly-PIN" firstAttribute="top" secondItem="qQN-y0-pZU" secondAttribute="bottom" constant="10" id="6mo-MW-Tif"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="laT-Ly-PIN" secondAttribute="bottom" constant="10" id="7IO-1Z-xHQ"/>
                             <constraint firstAttribute="trailingMargin" secondItem="35z-o5-Tlg" secondAttribute="trailing" constant="5" id="7cg-Y2-Fxt"/>
                             <constraint firstAttribute="centerX" secondItem="laT-Ly-PIN" secondAttribute="centerX" id="8xf-Gx-E9t"/>
+                            <constraint firstItem="laT-Ly-PIN" firstAttribute="top" secondItem="pKR-Hy-jaa" secondAttribute="bottom" constant="12" id="ACZ-VR-wtf"/>
                             <constraint firstItem="35z-o5-Tlg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="5" id="AFg-D5-yFl"/>
                             <constraint firstItem="laT-Ly-PIN" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="5" id="Bo6-Us-Jt0"/>
                             <constraint firstItem="pKR-Hy-jaa" firstAttribute="top" secondItem="35z-o5-Tlg" secondAttribute="bottom" constant="59" id="GWc-Th-5h3"/>
+                            <constraint firstAttribute="centerX" secondItem="qQN-y0-pZU" secondAttribute="centerX" id="JCF-Uf-uaa"/>
                             <constraint firstAttribute="trailingMargin" secondItem="3Yo-PL-Xfg" secondAttribute="trailing" constant="5" id="Ltf-tO-ZBK"/>
                             <constraint firstAttribute="trailingMargin" secondItem="CfA-VW-zgn" secondAttribute="trailing" constant="5" id="QAL-ap-NIT"/>
+                            <constraint firstItem="pKR-Hy-jaa" firstAttribute="top" secondItem="35z-o5-Tlg" secondAttribute="bottom" constant="50" id="SFI-hI-Nig"/>
                             <constraint firstAttribute="trailingMargin" secondItem="laT-Ly-PIN" secondAttribute="trailing" constant="5" id="Sek-Gi-SD3"/>
                             <constraint firstItem="6IE-mt-SnJ" firstAttribute="top" secondItem="3Yo-PL-Xfg" secondAttribute="bottom" constant="18" id="TT6-rf-oV9"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="qQN-y0-pZU" secondAttribute="trailing" constant="5" id="UKT-4B-rsn"/>
                             <constraint firstItem="3Yo-PL-Xfg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="5" id="USy-r2-wD9"/>
                             <constraint firstAttribute="trailingMargin" secondItem="6IE-mt-SnJ" secondAttribute="trailing" constant="5" id="WEB-x1-ZQO"/>
                             <constraint firstAttribute="centerX" secondItem="pKR-Hy-jaa" secondAttribute="centerX" id="WtF-f0-7hF"/>
@@ -105,6 +118,7 @@
                             <constraint firstAttribute="centerX" secondItem="35z-o5-Tlg" secondAttribute="centerX" id="amh-TS-8AZ"/>
                             <constraint firstItem="6IE-mt-SnJ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="5" id="hsX-bd-BMF"/>
                             <constraint firstAttribute="centerX" secondItem="6IE-mt-SnJ" secondAttribute="centerX" id="kfX-D0-WxO"/>
+                            <constraint firstItem="qQN-y0-pZU" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="5" id="ktU-Yb-1Al"/>
                             <constraint firstAttribute="trailingMargin" secondItem="pKR-Hy-jaa" secondAttribute="trailing" constant="5" id="qwB-6Y-SkO"/>
                             <constraint firstAttribute="centerX" secondItem="CfA-VW-zgn" secondAttribute="centerX" id="sJL-Q0-037"/>
                             <constraint firstItem="CfA-VW-zgn" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="5" id="tiC-uY-f1M"/>
@@ -114,6 +128,7 @@
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="GWc-Th-5h3"/>
+                                <exclude reference="ACZ-VR-wtf"/>
                             </mask>
                         </variation>
                     </view>
@@ -124,7 +139,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="304" y="838"/>
+            <point key="canvasLocation" x="-82" y="569"/>
         </scene>
         <!--Main View Controller-->
         <scene sceneID="LBQ-F4-B93">
@@ -326,7 +341,6 @@
                                     <outlet property="LBLNome" destination="k99-tB-Us1" id="DhH-If-FyU"/>
                                     <outlet property="LBLcategoria" destination="MM8-oZ-GrM" id="8jB-0d-Y9e"/>
                                     <outlet property="imgApp" destination="56G-XE-UUS" id="FBB-Ju-g1N"/>
-                                    <segue destination="HyS-41-Kj4" kind="show" identifier="appDetail" id="CMF-7y-PTp"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -338,142 +352,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GzI-6H-MMV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="927" y="-350"/>
-        </scene>
-        <!--App View Controller-->
-        <scene sceneID="FmF-8Q-HlQ">
-            <objects>
-                <viewController id="HyS-41-Kj4" customClass="AppViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="5fL-9h-ipU"/>
-                        <viewControllerLayoutGuide type="bottom" id="SPo-Rv-sIo"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="ude-Lb-2rj">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nome" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wZ0-6Q-qh2">
-                                <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7mv-oc-DAM">
-                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hw0-J1-0I5">
-                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="2WU-3i-2Ty"/>
-                                    <constraint firstAttribute="width" constant="46" id="kci-O2-Clr"/>
-                                </constraints>
-                                <state key="normal" title="Button">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="2WU-3i-2Ty"/>
-                                        <exclude reference="kci-O2-Clr"/>
-                                    </mask>
-                                </variation>
-                                <variation key="heightClass=regular-widthClass=compact">
-                                    <mask key="constraints">
-                                        <include reference="2WU-3i-2Ty"/>
-                                        <include reference="kci-O2-Clr"/>
-                                    </mask>
-                                </variation>
-                                <connections>
-                                    <segue destination="gIM-yo-vEZ" kind="show" id="2iC-NZ-sNE"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Categoria" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qmi-81-RL7">
-                                <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="7mv-oc-DAM" firstAttribute="leading" secondItem="ude-Lb-2rj" secondAttribute="leadingMargin" constant="57" id="00K-ea-7dV"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Qmi-81-RL7" secondAttribute="trailing" constant="114" id="2eZ-mT-Xoj"/>
-                            <constraint firstItem="hw0-J1-0I5" firstAttribute="top" secondItem="7mv-oc-DAM" secondAttribute="bottom" constant="114" id="6zK-wS-8RK"/>
-                            <constraint firstItem="7mv-oc-DAM" firstAttribute="top" secondItem="Qmi-81-RL7" secondAttribute="bottom" constant="124" id="9Hz-BO-xc0"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="hw0-J1-0I5" secondAttribute="trailing" constant="161" id="BCl-4Z-Zhl"/>
-                            <constraint firstItem="SPo-Rv-sIo" firstAttribute="top" secondItem="hw0-J1-0I5" secondAttribute="bottom" constant="111" id="Cpt-fv-Wdl"/>
-                            <constraint firstItem="wZ0-6Q-qh2" firstAttribute="leading" secondItem="ude-Lb-2rj" secondAttribute="leadingMargin" constant="114" id="SuE-MH-q7r"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="7mv-oc-DAM" secondAttribute="trailing" constant="56" id="VL1-Hu-QtC"/>
-                            <constraint firstItem="Qmi-81-RL7" firstAttribute="leading" secondItem="ude-Lb-2rj" secondAttribute="leadingMargin" constant="114" id="gUi-AF-AHI"/>
-                            <constraint firstItem="Qmi-81-RL7" firstAttribute="top" secondItem="wZ0-6Q-qh2" secondAttribute="bottom" constant="120" id="nhK-2o-5XB"/>
-                            <constraint firstItem="7mv-oc-DAM" firstAttribute="top" secondItem="Qmi-81-RL7" secondAttribute="bottom" constant="124" id="pgJ-wl-PjP"/>
-                            <constraint firstItem="Qmi-81-RL7" firstAttribute="top" secondItem="wZ0-6Q-qh2" secondAttribute="bottom" constant="120" id="u0L-OM-weD"/>
-                            <constraint firstItem="wZ0-6Q-qh2" firstAttribute="top" secondItem="5fL-9h-ipU" secondAttribute="bottom" constant="38" id="uDc-6N-ORD"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="wZ0-6Q-qh2" secondAttribute="trailing" constant="114" id="w3X-hL-GRf"/>
-                            <constraint firstItem="hw0-J1-0I5" firstAttribute="leading" secondItem="ude-Lb-2rj" secondAttribute="leadingMargin" constant="161" id="wmu-9h-jhc"/>
-                        </constraints>
-                        <variation key="default">
-                            <mask key="subviews">
-                                <exclude reference="wZ0-6Q-qh2"/>
-                                <exclude reference="7mv-oc-DAM"/>
-                                <exclude reference="hw0-J1-0I5"/>
-                                <exclude reference="Qmi-81-RL7"/>
-                            </mask>
-                            <mask key="constraints">
-                                <exclude reference="2eZ-mT-Xoj"/>
-                                <exclude reference="gUi-AF-AHI"/>
-                                <exclude reference="nhK-2o-5XB"/>
-                                <exclude reference="u0L-OM-weD"/>
-                                <exclude reference="Cpt-fv-Wdl"/>
-                                <exclude reference="SuE-MH-q7r"/>
-                                <exclude reference="uDc-6N-ORD"/>
-                                <exclude reference="w3X-hL-GRf"/>
-                                <exclude reference="6zK-wS-8RK"/>
-                                <exclude reference="BCl-4Z-Zhl"/>
-                                <exclude reference="wmu-9h-jhc"/>
-                                <exclude reference="00K-ea-7dV"/>
-                                <exclude reference="9Hz-BO-xc0"/>
-                                <exclude reference="VL1-Hu-QtC"/>
-                                <exclude reference="pgJ-wl-PjP"/>
-                            </mask>
-                        </variation>
-                        <variation key="heightClass=regular-widthClass=compact">
-                            <mask key="subviews">
-                                <include reference="wZ0-6Q-qh2"/>
-                                <include reference="7mv-oc-DAM"/>
-                                <include reference="hw0-J1-0I5"/>
-                                <include reference="Qmi-81-RL7"/>
-                            </mask>
-                            <mask key="constraints">
-                                <include reference="2eZ-mT-Xoj"/>
-                                <include reference="gUi-AF-AHI"/>
-                                <include reference="nhK-2o-5XB"/>
-                                <exclude reference="u0L-OM-weD"/>
-                                <include reference="Cpt-fv-Wdl"/>
-                                <include reference="SuE-MH-q7r"/>
-                                <include reference="uDc-6N-ORD"/>
-                                <include reference="w3X-hL-GRf"/>
-                                <include reference="6zK-wS-8RK"/>
-                                <include reference="BCl-4Z-Zhl"/>
-                                <include reference="wmu-9h-jhc"/>
-                                <include reference="00K-ea-7dV"/>
-                                <exclude reference="9Hz-BO-xc0"/>
-                                <include reference="VL1-Hu-QtC"/>
-                                <include reference="pgJ-wl-PjP"/>
-                            </mask>
-                        </variation>
-                    </view>
-                    <connections>
-                        <outlet property="appCategoria" destination="Qmi-81-RL7" id="aCr-j4-CH4"/>
-                        <outlet property="appNome" destination="wZ0-6Q-qh2" id="R1K-ol-zCY"/>
-                        <outlet property="imgApp" destination="7mv-oc-DAM" id="4wg-u8-gXn"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="clK-yL-oxp" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1708.5" y="-360.75"/>
+            <point key="canvasLocation" x="931" y="-318"/>
         </scene>
     </scenes>
-    <inferredMetricsTieBreakers>
-        <segue reference="2iC-NZ-sNE"/>
-    </inferredMetricsTieBreakers>
 </document>
